--- a/operator-helm/helm-charts/nginx/Chart.yaml
+++ b/operator-helm/helm-charts/nginx/Chart.yaml
@@ -1,6 +1,5 @@
-apiVersion: v2
-appVersion: 1.16.0
+apiVersion: v1
+appVersion: "1.0"
 description: A Helm chart for Kubernetes
-name: nginx
-type: application
+name: visitors-helm
 version: 0.1.0
